---------------------------------------------------------------------------------------------------
Version: 0.5.200
  The metalloid? i hardly know her! Update:

  Additions:
    - Added Boron.
    - Added Silicon.
    - Added Tellerium.
    - Added Germanium.
    - Added Yttrium.
    - Added two new ways to make glass and glass products: borosillicate glass and molten potassium. One allows for betterer recipes of stuff like glass bottles and fibers, and the other allows for more efficient glass recipes.
    - Added robochargers and robostashers, like the thing from that one mod.

  Changes:
    - Gave glass its own row of recipes, and moved science bottles there.
    - Changed vacuum tubes crafting time from 5 to 7 seconds, and CRT's from 20 to 28.
    - Changed the science pack requirements for Francium Ultracool Centrifugal Kabbalism, now requiring all prerequisite science packs as to lower confusion for new players.
    - Upped Magneto orbital traps glass input from 8 to 24.

  Fixes:
    - Fixed some wood-related recipes not being in the same place.
    - Fixed sulfur not being in the correct place.
    - Made some attempts to curb the file size, but idk chief im gonna have to split these into graphic mods soon
    - Changed solar panel equipment 2 into solar panel equipment MK2.
    - Fixed some leeching icons having wrong stuff in it in my crusade to make this mod smaller.
    - Fixed some locale issues.
    - (#3) Fixed processing integrated circuit molding giving advanced integrated circuits.
    - Fixed a lot of minor locale issues, like capatalisation and random bs like that.

---------------------------------------------------------------------------------------------------
Version: 0.5.115
  The clockman reference Update:

  Fixes:
    - Fixed placement of the battery charging buildings.
    - Fixed chemical resin not being craftable without unlocking PTM science.
