@@ -8623,6 +8623,7 @@ data:extend({
         icon_size = 128,
         flags = {"placeable-neutral", "placeable-player", "player-creation"},
         minable = {mining_time = 0.9, result = "pm-leaching-field"},
+        map_color = {0.5, 0, 1},
         max_health = 800,
         corpse = "pm-evaporator-2",
         dying_explosion = "assembling-machine-1-explosion",
@@ -9232,6 +9233,120 @@ data:extend({
             type = "poison"
         }
       },
+      {
+        type = "projectile",
+        name = "pm-sodium-grenade",
+        flags = {"not-on-map"},
+        acceleration = 0.008,
+        action =
+        {
+          {
+            type = "direct",
+            action_delivery =
+            {
+              type = "instant",
+              target_effects =
+              {
+                {
+                  type = "create-entity",
+                  entity_name = "grenade-explosion"
+                },
+                {
+                  type = "create-entity",
+                  entity_name = "small-scorchmark-tintable",
+                  check_buildability = true
+                },
+                {
+                  type = "invoke-tile-trigger",
+                  repeat_count = 1
+                },
+                {
+                  type = "destroy-decoratives",
+                  from_render_layer = "decorative",
+                  to_render_layer = "object",
+                  include_soft_decoratives = true, -- soft decoratives are decoratives with grows_through_rail_path = true
+                  include_decals = false,
+                  invoke_decorative_trigger = true,
+                  decoratives_with_trigger_only = false, -- if true, destroys only decoratives that have trigger_effect set
+                  radius = 2.25 -- large radius for demostrative purposes
+                }
+              }
+            }
+          },
+          {
+            type = "area",
+            radius = 8,
+            action_delivery =
+            {
+              type = "instant",
+              target_effects =
+              {
+                {
+                  type = "damage",
+                  damage = {amount = 20, type = "explosion"}
+                },
+                {
+                  type = "create-entity",
+                  entity_name = "explosion"
+                }
+              }
+            }
+          }
+        },
+        light = {intensity = 0.5, size = 4},
+        animation =
+        {
+          filename = "__base__/graphics/entity/grenade/grenade.png",
+          draw_as_glow = true,
+          frame_count = 15,
+          line_length = 8,
+          animation_speed = 0.250,
+          width = 26,
+          height = 28,
+          shift = util.by_pixel(1, 1),
+          priority = "high",
+          hr_version =
+          {
+            filename = "__base__/graphics/entity/grenade/hr-grenade.png",
+            draw_as_glow = true,
+            frame_count = 15,
+            line_length = 8,
+            animation_speed = 0.250,
+            width = 48,
+            height = 54,
+            shift = util.by_pixel(0.5, 0.5),
+            priority = "high",
+            scale = 0.5
+          }
+    
+        },
+        shadow =
+        {
+          filename = "__base__/graphics/entity/grenade/grenade-shadow.png",
+          frame_count = 15,
+          line_length = 8,
+          animation_speed = 0.250,
+          width = 26,
+          height = 20,
+          shift = util.by_pixel(2, 6),
+          priority = "high",
+          draw_as_shadow = true,
+          hr_version =
+          {
+            filename = "__base__/graphics/entity/grenade/hr-grenade-shadow.png",
+            frame_count = 15,
+            line_length = 8,
+            animation_speed = 0.250,
+            width = 50,
+            height = 40,
+            shift = util.by_pixel(2, 6),
+            priority = "high",
+            draw_as_shadow = true,
+            scale = 0.5
+          }
+        }
+      },
+  
   })
 --REMINDERS SO I KNOW HOW TO MAKE THESE:
 -- negative co-ords are up, positive co-ords are down
