@@ -31,10 +31,10 @@ data:extend({
         subgroup = "pm-acid-crafting",
         category = "pm-evaporation",
         hide_from_player_crafting = true,
-        energy_required = 1,
+        energy_required = 0.5,
         ingredients = 
         {
-            {type = "fluid", name = "water", amount = 10}
+            {type = "fluid", name = "water", amount = 25}
         },
         results = {}
     },
